# ons-api-processing

./: .gitignore  README.md  project.md  pyproject.toml
src/ons_api_processing/: cli.py  config.py
src/ons_api_processing/api/: client.py
src/ons_api_processing/assets/: dicionario_carga_verificada.json
src/ons_api_processing/export/: output.py
src/ons_api_processing/processing/: transform.py
