[project]
name = "ons-api-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pandas",
    "pyarrow",
    "matplotlib",
    "requests",
    "rich>=14.3.3",
]

[project.scripts]
ons-carga  = "ons_api_processing.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ons_api_processing"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
